Bug 106027 - [11 Regression] ICE: 'verify_gimple' failed (error: mismatching comparison operand types) since r11-2450-g10231958fcfb13bc
Summary: [11 Regression] ICE: 'verify_gimple' failed (error: mismatching comparison op...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 13.0
: P2 normal
Target Milestone: 11.4
Assignee: Richard Biener
URL:
Keywords: ice-checking, ice-on-valid-code, wrong-code
Depends on:
Blocks:
 
Reported: 2022-06-19 05:22 UTC by Arseny Solokha
Modified: 2022-10-11 13:05 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work: 11.3.1, 12.1.1, 13.0, 7.4.0
Known to fail: 10.3.0, 11.3.0, 12.1.0, 8.5.0, 9.5.0
Last reconfirmed: 2022-06-20 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arseny Solokha 2022-06-19 05:22:40 UTC
gcc 13.0.0 20220612 snapshot (g:add1adaa17a294ea25918ffb4fdd40f115362632) ICEs when compiling the following testcase w/ -O1:

int
foo (unsigned int x, int y)
{
  return x <= (((y != y) < 0) ? y < 1 : 0);
}

% gcc-13.0.0 -O1 -c lxx02x06.c
lxx02x06.c: In function 'foo':
lxx02x06.c:2:1: error: mismatching comparison operand types
    2 | foo (unsigned int x, int y)
      | ^~~
unsigned int
int
_1 = x <= 0;
lxx02x06.c:2:1: internal compiler error: 'verify_gimple' failed
0xf2b0cd verify_gimple_in_seq(gimple*)
	/var/tmp/portage/sys-devel/gcc-13.0.0_p20220612/work/gcc-13-20220612/gcc/tree-cfg.cc:5217
0xc0fb85 gimplify_body(tree_node*, bool)
	/var/tmp/portage/sys-devel/gcc-13.0.0_p20220612/work/gcc-13-20220612/gcc/gimplify.cc:16543
0xc0fd4c gimplify_function_tree(tree_node*)
	/var/tmp/portage/sys-devel/gcc-13.0.0_p20220612/work/gcc-13-20220612/gcc/gimplify.cc:16614
0xa26c47 cgraph_node::analyze()
	/var/tmp/portage/sys-devel/gcc-13.0.0_p20220612/work/gcc-13-20220612/gcc/cgraphunit.cc:676
0xa297a7 analyze_functions
	/var/tmp/portage/sys-devel/gcc-13.0.0_p20220612/work/gcc-13-20220612/gcc/cgraphunit.cc:1241
0xa2a44d symbol_table::finalize_compilation_unit()
	/var/tmp/portage/sys-devel/gcc-13.0.0_p20220612/work/gcc-13-20220612/gcc/cgraphunit.cc:2501
Comment 1 Martin Liška 2022-06-20 08:15:16 UTC
Started with r11-2450-g10231958fcfb13bc.
Comment 2 Richard Biener 2022-06-20 11:27:06 UTC
Mine.
Comment 3 Richard Biener 2022-06-20 11:40:08 UTC
So the issue seems to be that

#4  0x0000000000f82be3 in fold_binary_loc (loc=2147483656, 
    code=TRUTH_ANDIF_EXPR, type=<integer_type 0x7ffff68dd690 unsigned int>, 
    op0=<nop_expr 0x7ffff6a0f240>, op1=<nop_expr 0x7ffff6a0f220>)
    at /space/rguenther/src/gcc/gcc/fold-const.cc:12044
      /* A < X && A + 1 > Y ==> A < X && A >= Y.  Normally A + 1 > Y
         means A >= Y && A != MAX, but in this case we know that
         A < X <= MAX.  */

      if (!TREE_SIDE_EFFECTS (arg0)
          && !TREE_SIDE_EFFECTS (arg1))
        {
          tem = fold_to_nonsharp_ineq_using_bound (loc, arg0, arg1);
          if (tem && !operand_equal_p (tem, arg0, 0))
            return fold_build2_loc (loc, code, type, tem, arg1);

          tem = fold_to_nonsharp_ineq_using_bound (loc, arg1, arg0);
          if (tem && !operand_equal_p (tem, arg1, 0))
            return fold_build2_loc (loc, code, type, arg0, tem);

builds unsigned type TRUTH_ANDIF_EXPR with signed type arg0/tem (op0/op1
are conversions to unsigned type).  The offending revision just chokes
on the invalid input.
Comment 4 GCC Commits 2022-06-20 13:02:21 UTC
The master branch has been updated by Richard Biener <rguenth@gcc.gnu.org>:

https://gcc.gnu.org/g:713f2fd923442b1be620a44240ddf786ae0ab476

commit r13-1174-g713f2fd923442b1be620a44240ddf786ae0ab476
Author: Richard Biener <rguenther@suse.de>
Date:   Mon Jun 20 13:40:50 2022 +0200

    middle-end/106027 - fix types in needle folding
    
    The fold_to_nonsharp_ineq_using_bound folding ends up creating invalid
    typed IL which confuses later foldings.  The following fixes that.
    
    2022-06-20  Richard Biener  <rguenther@suse.de>
    
            PR middle-end/106027
            * fold-const.cc (fold_to_nonsharp_ineq_using_bound): Use the
            type of the prevailing comparison for the new comparison type.
            (fold_binary_loc): Use proper types for the A < X && A + 1 > Y
            to A < X && A >= Y folding.
    
            * gcc.dg/pr106027.c: New testcase.
Comment 5 Richard Biener 2022-06-20 13:02:58 UTC
Fixed on trunk sofar.
Comment 6 GCC Commits 2022-07-19 11:38:19 UTC
The releases/gcc-12 branch has been updated by Richard Biener <rguenth@gcc.gnu.org>:

https://gcc.gnu.org/g:71c6baa9abc8c378a1aa913398a8f1a2277946e0

commit r12-8581-g71c6baa9abc8c378a1aa913398a8f1a2277946e0
Author: Richard Biener <rguenther@suse.de>
Date:   Mon Jun 20 13:40:50 2022 +0200

    middle-end/106027 - fix types in needle folding
    
    The fold_to_nonsharp_ineq_using_bound folding ends up creating invalid
    typed IL which confuses later foldings.  The following fixes that.
    
    2022-06-20  Richard Biener  <rguenther@suse.de>
    
            PR middle-end/106027
            * fold-const.cc (fold_to_nonsharp_ineq_using_bound): Use the
            type of the prevailing comparison for the new comparison type.
            (fold_binary_loc): Use proper types for the A < X && A + 1 > Y
            to A < X && A >= Y folding.
    
            * gcc.dg/pr106027.c: New testcase.
    
    (cherry picked from commit 713f2fd923442b1be620a44240ddf786ae0ab476)
Comment 7 GCC Commits 2022-10-11 13:04:19 UTC
The releases/gcc-11 branch has been updated by Richard Biener <rguenth@gcc.gnu.org>:

https://gcc.gnu.org/g:a27e5fc76a49b759d271a828f225899434b537e9

commit r11-10302-ga27e5fc76a49b759d271a828f225899434b537e9
Author: Richard Biener <rguenther@suse.de>
Date:   Mon Jun 20 13:40:50 2022 +0200

    middle-end/106027 - fix types in needle folding
    
    The fold_to_nonsharp_ineq_using_bound folding ends up creating invalid
    typed IL which confuses later foldings.  The following fixes that.
    
    2022-06-20  Richard Biener  <rguenther@suse.de>
    
            PR middle-end/106027
            * fold-const.c (fold_to_nonsharp_ineq_using_bound): Use the
            type of the prevailing comparison for the new comparison type.
            (fold_binary_loc): Use proper types for the A < X && A + 1 > Y
            to A < X && A >= Y folding.
    
            * gcc.dg/pr106027.c: New testcase.
    
    (cherry picked from commit 713f2fd923442b1be620a44240ddf786ae0ab476)
Comment 8 Richard Biener 2022-10-11 13:05:11 UTC
Fixed.